2004-02-26 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: add <dc:creator> into RDF.

2004-02-19 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: support conf_proc and split English resource.

2004-02-18 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: remove debug print. thanks MATSUOKA Kohei <kohei@machu.jp>.

2004-02-17 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: fix about <link> element in HTML header.

2004-01-18 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: hide category in the list.

2003-12-12 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: add whatsnew_list.rdf.image options. thanks Kouhei Sutou <kou@cozmixng.org>.

2003-12-03 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: apply plugin to rdf file.

2003-11-27 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: support Config#base_url.

2003-11-13 TADA Tadashi <sho@spc.gr.jp>
	* release 1.5.6.

2003-11-07 TADA Tadashi <sho@spc.gr.jp>
	* plugin/whatsnew-list.rb: add information to HTML header for Auto-Discovery.
	* plugin/whatsnew-list.rb: i18n.

2003-10-24 TADA Tadashi <sho@spc.gr.jp>
	* plugin/title-navi.rb: apply_plugin support.

2003-10-15 Junichiro Kita <kita@kitaj.no-ip.com>
	* plugin/blog-category.rb: split language resource.

2003-10-14 TADA Tadashi <sho@spc.gr.jp>
	* plugin/blog-style.rb: split language resource.
	* plugin/blog-style_ja.rb: marged to blug-style.rb.
	* README.*: modified using 01sp.rb to select plugins.

2003-10-12 Junichiro Kita <kita@kitaj.no-ip.com>
	* plugin/blog-category.rb: require 'pstore'.

2003-10-09 Junichiro Kita <kita@kitaj.no-ip.com>
	* plugin/blog-category.rb: space character after [category name] is omissible.

2003-09-30 Junichiro Kita <kita@kitaj.no-ip.com>
	* plugin/category.rb, blog-category.rb: move category.rb to blog-category.rb.

2003-09-29 Junichiro Kita <kita@kitaj.no-ip.com>
	* README, README.en: document for category.rb.

2003-09-29 Junichiro Kita <kita@kitaj.no-ip.com>