@@ -1,3 +1,6 @@
+2004-03-20 TADA Tadashi <sho@spc.gr.jp>
+	* plugin/blog-style.rb: disable section of TrackBack source.
+
 2004-02-26 TADA Tadashi <sho@spc.gr.jp>
 	* plugin/whatsnew-list.rb: add <dc:creator> into RDF.
 
